# cross-compiled-helloworld

./: CMakeLists.txt  README.md  build.sh  c_main.c  cpp_main.cpp  main.c  main.cpp  populate.sh  test.cpp
cmake/: 3rdParty.cmake  ClangTidy.cmake  Doxygen.cmake  arm-gcc-toolchain.cmake
